syntax = "proto3";

option csharp_namespace = "WorkshopApp.Proto.Client";
package workshop_app.proto.client.tasks;

import "Protos/enums.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/wrappers.proto";
import "google/protobuf/timestamp.proto";

service TaskCommentsService {
  rpc V1GetComments(V1GetCommentsRequest) returns (V1GetCommentsResponse);
  rpc V1AddComment(V1AddCommentsRequest) returns (V1AddCommentsResponse);
  rpc V1SetDeleted(V1SetDeletedRequest) returns (google.protobuf.Empty);
  rpc V1Update(V1UpdateRequest) returns (google.protobuf.Empty);
}

message V1GetCommentsRequest {
  int64 task_id = 1;
  bool take_deleted = 2;
}

message V1GetCommentsResponse {
  repeated Comment comments = 1;
}

message Comment {
  int64 task_id = 1;
  string comment = 2;
  bool is_deleted = 3;
  google.protobuf.Timestamp created_at = 4;
}

message V1AddCommentsRequest {
  int64 task_id = 1;
  int64 author_user_id = 2;
  string message = 3;
}

message V1AddCommentsResponse {
  int64 comment_id = 1;
}

message V1SetDeletedRequest {
  int64 task_comment_id = 1;
}

message V1UpdateRequest {
  int64 comment_id = 1;
  int64 task_id = 2;
  int64 author_user_id = 3;
  string message = 4;
}